--- a/src/pages/components/cover/cover.module.scss
+++ b/src/pages/components/cover/cover.module.scss
@@ -1,25 +1,28 @@
 .cover {
-    height: 90vh;
+    min-height: 90vh;
     width: 100%;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    background: url("../../../../public/capa.png") no-repeat top center;
+    background: url("../../../../public/capa.png") no-repeat 80%;
     background-size: cover;
 
     .limited_width {
         width: 100%;
         max-width: 1024px;
         height: 100%;
+        padding: 10px;
 
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
 
         .container_text {
             max-width: 500px;
+
+            background-color: rgba(0, 0, 0, 0.63);
     
             display: flex;
             flex-direction: column;
@@ -30,7 +33,10 @@
             }
     
             h1 {
+                font-size: clamp(3rem, 4vw, 4rem);
                 color: #fff;
+                line-height: 100px;
+                letter-spacing: 8px;
             }
         }
     }
