--- a/src/pages/components/header/header.module.scss
+++ b/src/pages/components/header/header.module.scss
@@ -10,8 +10,11 @@
     .limited_width {
         width: 100%;
         max-width: 1024px;
+        padding: 20px 0;
 
+        flex: 1 1 100%;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
 
@@ -23,10 +26,16 @@
         menu {
             display: flex;
             gap: 20px;
+
+            margin-top: 10px;
+            padding-top: 10px;
+            border-top: 2px solid rgba(0, 0, 0, 0.507);
             
             a {
                 color: #000000;
                 text-decoration: none;
+
+                font-size: clamp(1rem, 1.5vw, 2rem);
             }
         }
     }
