--- a/src/pages/components/products/products.module.scss
+++ b/src/pages/components/products/products.module.scss
@@ -1,6 +1,8 @@
 .products {
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
+
+    padding: 40px 10px;
 
     background-color: #fff;
 
@@ -8,8 +10,11 @@
     align-items: center;
     justify-content: center;
 
+    overflow: unset;
+
     .limited_width {
         width: 100%;
+        height: 100%;
         max-width: 1024px;
 
         display: flex;
@@ -20,11 +25,21 @@
         color: #000000;
 
         h3 {
-            font-size: 2.2rem;
+            font-size: clamp(2rem, 2vw, 2rem);
+            text-align: center;
+        }
+
+        & h3:nth-of-type(2){
+            font-size: clamp(1.5rem, 1.5vw, 1.5rem);
+        }
+
+        p {
+            font-size: clamp(1rem, 1vw, 1rem);
+            text-align: center;
         }
 
         .container_cards {
-            width: 100%;
+            width: 100vw;
 
             display: flex;
             flex-direction: row;
@@ -34,20 +49,29 @@
 
             margin: 40px 0;
 
-            .card_product {
-                height: 250px;
+            box-sizing: border-box;
 
+            .card_product {
+                max-width: 100%;
+                height: 250px;
+                
                 background-color: #f6f6f6;
-                width: calc(50% - 10px);
                 padding: 20px 0;
+                margin: 0px 10px;
 
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-between;
+                flex: 1 1 100%;
+                max-width: 100%;
+            
 
                 box-shadow: #000000 0px 0px 18px 1px;
                 border-radius: 5px;
+                box-sizing: border-box;
+
+                overflow: unset;
 
                 h4 {
                     font-size: 2rem;
@@ -76,6 +100,10 @@
             flex-direction: column;
             align-items: center;
             gap: 10px;
+
+            text-align: center;
+            font-size: clamp(1rem, 1.5vw, 1.5rem);
+            list-style-position: inside;
         }
     }
 }
